updated portrait functionality